--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <span>LALALA</span>
   </body>
 </html>
